--- a/propuestas-2026-3.html
+++ b/propuestas-2026-3.html
@@ -303,7 +303,7 @@ function agregarPropuestaAlListado() {
                 <tr><td>Cesión de derechos (orgánico)</td><td colspan="6">Los materiales derivados de la producción (fotos/vídeo) podrán ser utilizados por la marca, durante un periodo de 6 meses, en sus medios.</td><td>${formatNumber(pCesion)} €</td></tr>`;
     }
     tabla += `</tbody></table><div class="notas-pie">* Las Redes Sociales se publicarán de forma orgánica y, eventualmente, se amplificará vía paid (data afín)
-* Las Redes Sociales de los BC de marcas de bebidas alcohólicas tedrán un post orgánico en el feed de FB, segmentado a mayores de 18 años. No se publicará IG Story (META lo prohíbe). En la amplificación paid, si fuese necesario, el post se viralizará en los feed de FB e IG. Si META no lo permitiera, lo viralizaríamos vía Outbrain (audiencia más afin al soporte Hearst)</div>`;
+* Anunciantes bebidas alcoholicas: Post orgánico en FB (+18) sin IG Story (META lo prohíbe). Amplificación pagada en los feeds de FB e IG o vía Outbrain como alternativa técnica si META elimina el post en FB (audiencia más afin al soporte Hearst)</div>`;
   }
   div.innerHTML += tabla; list.appendChild(div); calcularTotalesPropuesta(); actualizarInterfazConfig();
 }
